added unit tests for group controller, fix issue with ts node, swagger, and module alias connection
